<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="fiap.com.br.amapp.PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".LoginActivity">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/payment_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/payment_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/payment_form_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvOrderTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Valor Total: R$ 0,00"
                    android:textColor="@color/auxColor"
                    android:textSize="18sp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <AutoCompleteTextView
                            android:id="@+id/cpf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_cpf"
                            android:inputType="text|numberSigned"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/auxColor" />

                    </android.support.design.widget.TextInputLayout>

                    <AutoCompleteTextView
                        android:id="@+id/card_brand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/propt_cardBrand"
                        android:inputType="none|text|textCapSentences|textAutoComplete"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/auxColor" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <AutoCompleteTextView
                        android:id="@+id/cardNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_cardnumber"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/auxColor" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <AutoCompleteTextView
                        android:id="@+id/cardExp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_card_expires"
                        android:inputType="text|numberSigned"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/auxColor" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <AutoCompleteTextView
                        android:id="@+id/cvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_cvv"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/auxColor" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnPay"
                    style="@android:style/Widget.Holo.Light.Button.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/action_pay"
                    android:textColor="@color/auxColor" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
